--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "dockerode": "^2.2.10",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "react-router": "^2.5.2"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
