--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chart.js": "^2.2.0-rc.1",
     "classnames": "^2.2.5",
     "dockerode": "^2.2.10",
+    "react-chartjs": "git://github.com/reactjs/react-chartjs.git#chartjs-v2",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
